<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/bgPrimary"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ImageButton
        android:id="@+id/backLanguageButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/bgPrimary"
        android:contentDescription="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_left_ic" />

    <TextView
        android:id="@+id/textView"
        style="@style/Headline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/language"
        android:textColor="@color/fontPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/backLanguageButton"
        app:layout_constraintStart_toEndOf="@+id/backLanguageButton"
        app:layout_constraintTop_toTopOf="@+id/backLanguageButton" />

    <RadioButton
        android:id="@+id/russianRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:buttonTint="@color/permanentDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backLanguageButton"
        tools:checked="true" />

    <RadioButton
        android:id="@+id/englishRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"

        android:buttonTint="@color/permanentDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/russianRadioButton" />

    <RadioButton
        android:id="@+id/deutschRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:buttonTint="@color/permanentDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/englishRadioButton" />

    <RadioButton
        android:id="@+id/kyrgRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:buttonTint="@color/permanentDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deutschRadioButton" />

    <TextView
        android:id="@+id/textView2"
        style="@style/Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/russian"
        android:textColor="@color/fontPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/russianRadioButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/russianRadioButton" />

    <TextView
        android:id="@+id/textView3"
        style="@style/Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/english"
        android:textColor="@color/fontPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/englishRadioButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/englishRadioButton" />

    <TextView
        android:id="@+id/textView4"
        style="@style/Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/deutsch"
        android:textColor="@color/fontPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/deutschRadioButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/deutschRadioButton" />

    <TextView
        android:id="@+id/textView5"
        style="@style/Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/kyrg"
        android:textColor="@color/fontPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/kyrgRadioButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/kyrgRadioButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/applyButton"
        style="@style/Body2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cornerRadius="8dp"
        android:text="@string/apply"
        android:backgroundTint="@color/permanentPrimary"
        android:textColor="@color/fontPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>